# pulse

./: PulseLogic Admin console .txt  PulseLogic client app.txt  QUICKSTART.md  README.md  SETUP_GUIDE.md  STATUS.md  create-test-user.bat  credits.xlsx  docker-compose.yml  seed-demo-data.bat  setup.ps1  setup.sh  test-backend-auth.bat  vercel.json
.git-rewrite/: backup-refs  commit  index  parse  revs
.git-rewrite/t/: README.md
backend/: .env.example  Dockerfile  nest-cli.json  package-lock.json  package.json  tsconfig.json
backend/src/: app.module.ts  main.ts
docs/: RELEASE_GUIDE.md  SETUP_ANDROID.md  SETUP_DESKTOP.md  SETUP_IOS.md  TESTING_CHECKLIST.md
frontend/: .env.desktop  .env.example  .env.mobile  .eslintignore  .eslintrc.json  .gitignore  capacitor.config.ts  middleware.ts  next.config.js  package-lock.json  package.json  parse_credits.js  tailwind.config.js
frontend/android/: build.gradle  keystore.properties.example  settings.gradle
frontend/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
frontend/components/: EmergencyButton.tsx  Footer.tsx  providers.tsx
frontend/env/: dev.env  prod.env  staging.env
frontend/hooks/: useAuth.ts  useChat.ts  useMediaQuery.ts
frontend/lib/: api-client.ts  api-resilient.ts  api.ts  auth.ts  connection-monitor.ts  mobile-auth.ts
frontend/pages/: 404.tsx
frontend/scripts/: bump-version.js  set-env.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
(+236 files in other folders)
